[gd_scene format=3 uid="uid://q4h7k4l2dwum"]

[ext_resource type="FontFile" uid="uid://i7eaan4e1yb8" path="res://assets/fonts/AlphaProta/AlphaProta-Regular.ttf" id="1_cgd7b"]
[ext_resource type="Script" uid="uid://dpe1w3ka62jis" path="res://Scenes/Control/Victory/victory.gd" id="2_pfg7f"]
[ext_resource type="Texture2D" uid="uid://darbdoepde5r" path="res://assets/img/density_shift02.png" id="3_r185h"]
[ext_resource type="FontFile" uid="uid://cjghbu3gb86gg" path="res://assets/fonts/Linerama/Linerama-Regular.ttf" id="4_yfhc6"]
[ext_resource type="AudioStream" uid="uid://bt1a4sgyrn0xs" path="res://assets/audio/effects/video-game-gui-hovering-sound-417440 (mp3cut.net).mp3" id="5_bhkua"]
[ext_resource type="AudioStream" uid="uid://d0y6bp1oytqsk" path="res://assets/audio/music/201_loop.wav" id="5_r185h"]

[sub_resource type="Theme" id="Theme_syhdw"]
default_font = ExtResource("1_cgd7b")

[sub_resource type="Theme" id="Theme_u1y0g"]
default_font = ExtResource("4_yfhc6")
default_font_size = 43

[sub_resource type="LabelSettings" id="LabelSettings_gcedd"]
font_size = 110

[node name="Victory" type="Control" unique_id=37027002]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -14.0
offset_right = 23.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_syhdw")
script = ExtResource("2_pfg7f")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1235121205]
layout_mode = 0
offset_left = -13.0
offset_top = 18.0
offset_right = 1128.0
offset_bottom = 664.0
texture = ExtResource("3_r185h")

[node name="Panel" type="Panel" parent="." unique_id=1295218930]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = 74.0
offset_right = 231.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1603050597]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -91.0
offset_right = 218.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_u1y0g")

[node name="Jogar" type="Button" parent="Panel/VBoxContainer" unique_id=1589115099]
layout_mode = 2
text = "Jogar Novamente"

[node name="Voltar" type="Button" parent="Panel/VBoxContainer" unique_id=1655063935]
layout_mode = 2
text = "Voltar ao menu"

[node name="Sair" type="Button" parent="Panel/VBoxContainer" unique_id=659155431]
layout_mode = 2
text = "Sair"

[node name="music" type="AudioStreamPlayer" parent="." unique_id=2082730273]
stream = ExtResource("5_r185h")
autoplay = true

[node name="hover" type="AudioStreamPlayer" parent="." unique_id=337442101]
stream = ExtResource("5_bhkua")

[node name="Panel2" type="Panel" parent="." unique_id=1236754225]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -584.0
offset_top = 18.0
offset_right = 550.5
offset_bottom = 326.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Panel2" unique_id=1460625284]
layout_mode = 0
offset_left = 35.0
offset_top = 36.0
offset_right = 1067.0
offset_bottom = 261.0
text = "Escapou do labirinto"
label_settings = SubResource("LabelSettings_gcedd")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="Panel/VBoxContainer/Jogar" to="." method="_on_jogar_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Voltar" to="." method="_on_voltar_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Sair" to="." method="_on_sair_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
